--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: ruby
 rvm:
   - 2.0.0  # replace this with the ruby version you are using in development
 before_script:
-  - psql -c 'create database tax-determiner_test;' -U postgres
+  - psql -c 'create database tax_determiner_test;' -U postgres
