--- a/config/database.yml
+++ b/config/database.yml
@@ -57,7 +57,14 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter:  postgresql
+  host:     localhost
+  encoding: unicode
   database: tax-determiner_test
+  pool:     5
+  username:
+  password:
+  template: template0
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
